[metadata]
name = yanekobot
version = 0.1.0-beta.0
description = Yet Another Nekobot for Telegram
author = Evgeniy Filimonov (evgfilim1)
author_email = evgfilim1@yandex.ru
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3.10
keywords =
    nekobot
    neko
    telegram-bot

[options]
python_requires = >=3.10
packages = find:
install_requires =
    aiogram~=3.0.0b3
    PyYAML~=6.0.0
    pydantic~=1.9.0

[options.entry_points]
console_scripts =
    nekobot = nekobot.cli:main

[options.extras_require]
parser =
    Pyrogram~=2.0.24
    TgCrypto~=1.2.3
dev =
    mypy
    types-PyYAML
    black
    isort
